1.2.14
------------------------------------------------------------------------------------------------------------------------

2016-02-25: Laurent Declercq
	RELEASE i-MSCP 1.2.14

FRONTEND
	Fixed: Could not edit reseller PHP permissions (PHP Editor)
	Fixed: Unchecking all disabled functions has no effect (PHP Editor)

INSTALLER
	Fixed: Password must not be escaped (MySQL installer)

------------------------------------------------------------------------------------------------------------------------
1.2.13
------------------------------------------------------------------------------------------------------------------------

2016-02-24: Laurent Declercq
	RELEASE i-MSCP 1.2.13

CONFIG
	Fixed: Missing /php-fpm/php-fpm.pool.default declaration in configs/ubuntu/php-fpm/install.xml
	Updated: Licence header in skeletons

CONTRIB
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (20_dovecot_connections.pl)
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (40_dovecot_pfs.pl)

INSTALLER
	Fixed: Ensure that authentication plugin is set to 'mysql_native_password' for SQL root user (MySQL >= 5.7)
	Fixed: Perl DBI (mysql) package removed when using MariaDB server, leading to installation/update failure
	Fixed: Switch policy is ignored (SQL servers)
	Fixed: Wrong package names in Debian Strech package file (MySQL 5.6)

FRONTEND
	Fixed: Unable to handle uncaught exception thrown... Data `translator` is not registered
	Fixed: Exception browser writer doesn't display the expected exception in some contexts
	Fixed: Exception mail writer cache do not work
	Fixed: Unable to establish the connection to the database when using MySQL >= 5.7

------------------------------------------------------------------------------------------------------------------------
1.2.12
------------------------------------------------------------------------------------------------------------------------

2016-02-23: Laurent Declercq
	RELEASE i-MSCP 1.2.12
